﻿# MediaSearch.Client changelog

* 0.0.10
- Added changelog
- Added PageTitle parameter to PageHeader

* 0.0.11
- New EditFilter

* 0.0.12
- EditFilter can now filter on a group / groups only
- EditFilter display is fixed

* 0.0.13
- Enabled nullable
- Enabled preview features (abstract static in interfaces) => breaking changes

* 0.0.14
- Added more menu items
- Moved refresh data in Admin section
- Cosmetic changes to TableSimple component

* 0.0.15
- Added About page

* 0.0.16
- Added Login page