@@ -1,52 +1,53 @@
-﻿<div class="card">
+﻿<div class="accordion-item">
 
-  <div class="card-header">
-    <span>@About.Name</span>
-    <span> v</span>
-    <span>@About.CurrentVersion</span>
-  </div>
-  <div class="card-body changelog">
-    @{
-      using (StringReader Reader = new StringReader(About.ChangeLog)) {
-        string? Line = Reader.ReadLine();
-        while (Line is not null) {
-          if (Line.Trim() == "") {
-            <br />
-            Line = Reader.ReadLine();
-            continue;
-          }
-          switch (Line.First()) {
-            case '#':
-              <div class="changelog changelog.heading">@Line.After("# ")</div>
+  <h2 class="accordion-header" >
+    <button type="button" class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="@CollapsableChild">@AboutHeader</button>
+  </h2>
+
+  <div id="@Id" class="accordion-collapse collapse show" >
+    <div class="accordion-body">
+      @{
+        using (StringReader Reader = new StringReader(About.ChangeLog)) {
+          string? Line = Reader.ReadLine();
+          while (Line is not null) {
+            if (Line.Trim() == "") {
+              <br />
               Line = Reader.ReadLine();
               continue;
+            }
+            switch (Line.First()) {
+              case '#':
+                <div class="changelog changelog.heading">@Line.After("# ")</div>
+                Line = Reader.ReadLine();
+                continue;
 
-            case '*':
-              <div class="changelog changelog.version">@Line.After("* ")</div>
+              case '*':
+                <div class="changelog changelog.version">@Line.After("* ")</div>
 
-              <ul>
-                @{
-                  Line = Reader.ReadLine();
-                  while (Line is not null) {
-                    if (Line.Length > 0) {
-                      if (Line.First() == '*') {
-                        break;
-                      }
-                      if (Line.First() == '-') {
-                        <li class="changelog changelog.detail">@Line.After("- ")</li>
-                      }
-                    }
+                <ul>
+                  @{
                     Line = Reader.ReadLine();
+                    while (Line is not null) {
+                      if (Line.Length > 0) {
+                        if (Line.First() == '*') {
+                          break;
+                        }
+                        if (Line.First() == '-') {
+                          <li class="changelog changelog.detail">@Line.After("- ")</li>
+                        }
+                      }
+                      Line = Reader.ReadLine();
+                    }
                   }
-                }
-              </ul>
-              continue;
+                </ul>
+                continue;
+            }
+
           }
 
         }
-
       }
-    }
+    </div>
   </div>
 </div>
 
