@@ -1,4 +1,5 @@
 ﻿using Microsoft.AspNetCore.Components;
+using BLTools.Encryption;
 
 namespace MediaSearch.Client.Components;
 
@@ -15,4 +16,15 @@ public partial class About_Card : ComponentBase {
   }
   private TAbout? _About;
     
+  private bool IsCollapsed = false;
+  private string Id => About.ChangeLog.HashToBase64().Left(10);
+  [Parameter] public string Parent {get;set;} = string.Empty;
+  private string CollapsableChild => $"#{Id}";
+
+  private string AboutHeader => $"{About.Name} v{About.CurrentVersion}";
+
+
+  private void ToggleBody() {
+    IsCollapsed = !IsCollapsed;
+  }
 }
