@@ -43,7 +43,7 @@
       <label class="input-group-text" for="OutputDateMin">From year</label>
       <input type="number" @bind-value="@Filter.OutputDateMin" class="form-control" id="OutputDateMin" />
 
-      <label class="input-group-text" for="OutputDateMax">End year</label>
+      <label class="input-group-text" for="OutputDateMax">To year</label>
       <input type="number" @bind-value="@Filter.OutputDateMax" class="form-control" id="OutputDateMax" />
 
       <button class="btn btn-outline-danger" type="button" id="ClearOutputDate" @onclick="ClearOutputDate" disabled="@ClearOutputDateDisabled">x</button>
