@@ -1,5 +1,5 @@
 ﻿
-  <div class="mb-3 text-primary p-2 border border-1 border-primary">
+  <div class="mb-3 text-primary p-2 border bg-primary bg-opacity-50 text-white">
     <span class="fs-4">@PageTitle</span>
   </div>
 
