@@ -25,3 +25,6 @@
 
 * 0.0.16
 - Added Login page
+- using new logging system
+- Changes in client libs (bootstrap, etc)
+- Login required for Settings, System and About
